--- a/package.json
+++ b/package.json
@@ -15,7 +15,14 @@
     "gulp-watch": "~3.0.0"
   },
   "devDependencies": {
-    "gulp-coffee": "~2.2.0"
+    "gulp-coffee": "~2.2.0",
+    "karma": "~0.12.28",
+    "gulp-karma": "0.0.4",
+    "jasmine-core": "~2.1.3",
+    "karma-jasmine": "~0.3.2",
+    "karma-chrome-launcher": "~0.1.7",
+    "karma-phantomjs-launcher": "~0.1.3",
+    "phantomjs": "~1.9.12"
   },
   "scripts": {
     "test": "gulp test"
